--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = zwei
-version = 1.0.1
+version = 1.0.2
 description = Two
 
 [options]
@@ -12,5 +12,5 @@ package_dir =
 where = src
 
 [options.package_data]
-einer =
+zwei =
     configs/*.yaml
